symbol table & name analyzer